# Nepal_Dammage_Assessment_POC

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: brouillon.ipynb  config.json  damage_assessment_workflow.ipynb
notebooks/data/: data_catalog.json
notebooks/data/aoi/: affected_districts.geojson
notebooks/data/ems_maps/: download_info.txt
notebooks/scripts/: damage_analysis.py  data_acquisition.py  preprocessing.py  reporting.py  visualization.py
