```toml
[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "earthquake-damage-assessment"
description = "Nepal Earthquake Damage Assessment Using Satellite Imagery and GeoAI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["earthquake", "damage-assessment", "geoai", "remote-sensing", "disaster-response"]
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dynamic = ["version"]

requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "geopandas>=0.10.0",
    "rasterio>=1.2.0",
    "scikit-learn>=1.0.0",
    "scikit-image>=0.18.0",
    "tensorflow>=2.8.0",
    "xgboost>=1.5.0",
    "earthengine-api>=0.1.300",
    "folium>=0.12.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "opencv-python>=4.5.0",
    "reportlab>=3.6.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pre-commit>=2.15.0",
]

[project.urls]
"Homepage" = "https://github.com/S-bachir/Nepal_Dammage_Assessment_POC"
"Bug Reports" = "https://github.com/S-bachir/Nepal_Dammage_Assessment_POC"
"Source" = "https://github.com/S-bachir/Nepal_Dammage_Assessment_POC"

[tool.hatch.build.targets.sdist]
include = [
    "notebooks/scripts/**/*"
]

[tool.hatch.version]
source = "vcs"


